--- a/Alan Workspace.ipynb
+++ b/Alan Workspace.ipynb
@@ -8,16 +8,229 @@
    },
    "outputs": [],
    "source": [
-    "# import the raw training data\n",
+    "import pandas as pd\n",
+    "from statsmodels.imputation import mice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input shape:\t(8203, 344)\n",
+      "After standardization (8203, 344)\n",
+      "After converting categoricals:\t(8203, 859)\n",
+      "Input shape:\t(3255, 441)\n",
+      "After standardization (3255, 441)\n",
+      "After converting categoricals:\t(3255, 1432)\n",
+      "Input shape:\t(6469, 163)\n",
+      "After standardization (6469, 163)\n",
+      "After converting categoricals:\t(6469, 795)\n",
+      "Input shape:\t(37560, 41)\n",
+      "After standardization (37560, 41)\n",
+      "After converting categoricals:\t(37560, 274)\n",
+      "Input shape:\t(20252, 224)\n",
+      "After standardization (20252, 224)\n",
+      "After converting categoricals:\t(20252, 1641)\n",
+      "Input shape:\t(29913, 41)\n",
+      "After standardization (29913, 41)\n",
+      "After converting categoricals:\t(29913, 300)\n",
+      "Input shape:\t(4041, 344)\n",
+      "After standardization (4041, 344)\n",
+      "After converting categoricals:\t(4041, 851)\n",
+      "Input shape:\t(1604, 441)\n",
+      "After standardization (1604, 441)\n",
+      "After converting categoricals:\t(1604, 1419)\n",
+      "Input shape:\t(3187, 163)\n",
+      "After standardization (3187, 163)\n",
+      "After converting categoricals:\t(3187, 773)\n",
+      "Input shape:\t(18535, 41)\n",
+      "After standardization (18535, 41)\n",
+      "After converting categoricals:\t(18535, 273)\n",
+      "Input shape:\t(10066, 224)\n",
+      "After standardization (10066, 224)\n",
+      "After converting categoricals:\t(10066, 1534)\n",
+      "Input shape:\t(14701, 41)\n",
+      "After standardization (14701, 41)\n",
+      "After converting categoricals:\t(14701, 301)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import the raw training data for reference\n",
     "from data_munge import a_i_train, a_h_train, b_i_train, b_h_train, c_i_train, c_h_train\n",
     "\n",
-    "# import the raw test data\n",
+    "# import the preprocessed test data\n",
     "from data_munge import a_i_test, a_h_test, b_i_test, b_h_test, c_i_test, c_h_test\n",
     "\n",
     "# import the preprocessed data\n",
     "from data_munge import aX_h_train, ay_h_train, bX_h_train, by_h_train, cX_h_train, cy_h_train\n",
     "from data_munge import aX_i_train, ay_i_train, bX_i_train, by_i_train, cX_i_train, cy_i_train "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bX_h_train = mice.MICEData(bX_h_train).data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "def train_model(features, labels, **kwargs):\n",
+    "    \n",
+    "    # instantiate model\n",
+    "    model = RandomForestClassifier(n_estimators=50, random_state=0)\n",
+    "    \n",
+    "    # train model\n",
+    "    model.fit(features, labels)\n",
+    "    \n",
+    "    # get a (not-very-useful) sense of performance\n",
+    "    accuracy = model.score(features, labels)\n",
+    "    print(f\"In-sample accuracy: {accuracy:0.2%}\")\n",
+    "    \n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In-sample accuracy: 100.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_a = train_model(aX_h_train, ay_h_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In-sample accuracy: 99.94%\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_b = train_model(bX_h_train, by_h_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In-sample accuracy: 100.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_c = train_model(cX_h_train, cy_h_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b_h_test = mice.MICEData(b_h_test).data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_preds = model_a.predict_proba(a_h_test)\n",
+    "b_preds = model_b.predict_proba(b_h_test)\n",
+    "c_preds = model_c.predict_proba(c_h_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('yo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
