added a submissions folder

--- a/Alan Workspace.ipynb
+++ b/Alan Workspace.ipynb
@@ -3,18 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from statsmodels.imputation import mice"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,6 +49,19 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "from statsmodels.imputation import mice\n",
+    "\n",
+    "# import submission function\n",
+    "from data_munge import make_country_sub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# import the raw training data for reference\n",
     "from data_munge import a_i_train, a_h_train, b_i_train, b_h_train, c_i_train, c_h_train\n",
     "\n",
@@ -69,7 +70,7 @@
     "\n",
     "# import the preprocessed data\n",
     "from data_munge import aX_h_train, ay_h_train, bX_h_train, by_h_train, cX_h_train, cy_h_train\n",
-    "from data_munge import aX_i_train, ay_i_train, bX_i_train, by_i_train, cX_i_train, cy_i_train "
+    "from data_munge import aX_i_train, ay_i_train, bX_i_train, by_i_train, cX_i_train, cy_i_train \n"
    ]
   },
   {
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,56 +182,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "yo\n"
-     ]
-    }
-   ],
    "source": [
-    "print('yo')"
+    "a_sub = make_country_sub(a_preds, a_h_test, 'A')\n",
+    "b_sub = make_country_sub(b_preds, b_h_test, 'B')\n",
+    "c_sub = make_country_sub(c_preds, c_h_test, 'C')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "submission = pd.concat([a_sub, b_sub, c_sub])\n",
+    "\n",
+    "submission.to_csv('submissions/imputation_household.csv')\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
