corrected minor bug in make scorer

--- a/Alan Workspace.ipynb
+++ b/Alan Workspace.ipynb
@@ -2,9 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input shape:\t(8203, 344)\n",
+      "After standardization (8203, 344)\n",
+      "After converting categoricals:\t(8203, 859)\n",
+      "Input shape:\t(3255, 441)\n",
+      "After standardization (3255, 441)\n",
+      "After converting categoricals:\t(3255, 1432)\n",
+      "Input shape:\t(6469, 163)\n",
+      "After standardization (6469, 163)\n",
+      "After converting categoricals:\t(6469, 795)\n",
+      "Input shape:\t(37560, 41)\n",
+      "After standardization (37560, 41)\n",
+      "After converting categoricals:\t(37560, 274)\n",
+      "Input shape:\t(20252, 224)\n",
+      "After standardization (20252, 224)\n",
+      "After converting categoricals:\t(20252, 1641)\n",
+      "Input shape:\t(29913, 41)\n",
+      "After standardization (29913, 41)\n",
+      "After converting categoricals:\t(29913, 300)\n",
+      "Input shape:\t(4041, 344)\n",
+      "After standardization (4041, 344)\n",
+      "After converting categoricals:\t(4041, 851)\n",
+      "Input shape:\t(1604, 441)\n",
+      "After standardization (1604, 441)\n",
+      "After converting categoricals:\t(1604, 1419)\n",
+      "Input shape:\t(3187, 163)\n",
+      "After standardization (3187, 163)\n",
+      "After converting categoricals:\t(3187, 773)\n",
+      "Input shape:\t(18535, 41)\n",
+      "After standardization (18535, 41)\n",
+      "After converting categoricals:\t(18535, 273)\n",
+      "Input shape:\t(10066, 224)\n",
+      "After standardization (10066, 224)\n",
+      "After converting categoricals:\t(10066, 1534)\n",
+      "Input shape:\t(14701, 41)\n",
+      "After standardization (14701, 41)\n",
+      "After converting categoricals:\t(14701, 301)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from statsmodels.imputation import mice\n",
@@ -134,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -147,16 +190,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.41327609329055703"
+       "0.41327609329055703"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,16 +210,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.34561691199492683"
+       "0.34561691199492683"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,16 +230,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.14348070719919237"
+       "0.14348070719919237"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,16 +250,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.30079123749489206"
+       "0.30079123749489206"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
