--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "from statsmodels.imputation import mice\n",
     "import numpy as np\n",
     "from sklearn.model_selection import cross_val_score\n",
+    "from validation import benchmark\n",
     "\n",
     "# import submission function\n",
     "from data_munge import make_country_sub, impute"
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +60,7 @@
     "def train_model(features, labels, **kwargs):\n",
     "    \n",
     "    # instantiate model\n",
-    "    model = svm.SVC(probability=True)\n",
+    "    model = svm.SVC(kernel='sigmoid', probability=True, cache_size=500)\n",
     "    \n",
     "    # train model\n",
     "    model.fit(features, labels)\n",
@@ -73,14 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In-sample accuracy: 87.96%\n"
+      "In-sample accuracy: 86.10%\n"
      ]
     }
    ],
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -107,14 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In-sample accuracy: 90.52%\n"
+      "In-sample accuracy: 88.92%\n"
      ]
     }
    ],
@@ -124,7 +125,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "benchmark_a = benchmark(model_a, aX_h_train, ay_h_train)\n",
+    "benchmark_b = benchmark(model_b, bX_h_train, by_h_train)\n",
+    "benchmark_c = benchmark(model_c, cX_h_train, cy_h_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.23842640421846936"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "benchmark_a.score()\n",
+    "benchmark_b.score()\n",
+    "benchmark_c.score()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.26236176387521409"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean([benchmark_a.mean_score, benchmark_b.mean_score, benchmark_c.mean_score])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -137,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -150,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -161,18 +215,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "submission.to_csv('submissions/svm_1.csv')"
+    "submission.to_csv('submissions/svm_2.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -183,51 +237,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.2553659800309075"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "np.mean(submission_old.poor - submission.poor)"
+    "submission['type'] = 'SVM'\n",
+    "submission_old['type'] = 'RF'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scores = cross_val_score(model_a, aX_h_train, ay_h_train, cv=5, n_jobs=-1)"
+    "data = pd.concat([submission,submission_old], axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.8622791 ,  0.86837294,  0.86166971,  0.87621951,  0.8597561 ])"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1313bd68>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYUAAAEKCAYAAAD9xUlFAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAEzVJREFUeJzt3X+s3Xd93/Hny3bsmh8hSmJQ5fxw\nWrsQr+JHuAtsTCETjmRgS6YViqOxAGXNtGHHU1ukdKlClaKupX9UnmNKIlbhoJEQ2Na6yCRNaFo2\nBF1MfuKYrAfPSa5TOY7JAiTBju33/rjHX869vr735sf3fk98ng/pivP5fj/3npeii1/38/11UlVI\nkgSwoOsAkqThYSlIkhqWgiSpYSlIkhqWgiSpYSlIkhqWgiSpYSlIkhqWgiSpsajrAC/UmWeeWStW\nrOg6hiS9onz3u999sqqWzTbvFVcKK1asYMeOHV3HkKRXlCSPzGWeh48kSQ1LQZLUsBQkSQ1LQZLU\nsBRGWK/X4/3vfz+9Xq/rKJKGRGulkORPkzyR5Hsn2J8k/zlJL8kDSS5oK4umd8011/DMM89wzTXX\ndB1F0pBoc6XwBWDtDPvfC6zqf10J/EmLWTRFr9dj3759AOzbt8/VgiSgxVKoqm8CP5xhymXATTXh\nO8BpSX6+rTyabOrqwNWCJOj2nMJy4LGB8Xh/23GSXJlkR5Id+/fvn5dwJ7tjq4QTjSWNpi5LIdNs\nq+kmVtWNVTVWVWPLls16l7Yk6UXqshTGgbMHxmcBj3eURZJEt6WwDbiifxXSO4Gnq+rvO8wjSSOv\ntQfiJbkZuBg4M8k48CngFICq+hywHXgf0AOeBT7WVhZJ0ty0VgpVdfks+wv4RFvvL0l64byjWZLU\nsBQkSQ1LQZLUsBQkSQ1LQZLUsBQkSQ1LQZLUsBQkSQ1LQZLUsBQkSQ1LQZLUsBRG1CmnnDJpvHjx\n4o6SSBomlsKIev755yeNDx061FESScPEUpAkNSwFSVLDUpAkNSwFSVLDUpAkNSyFEZVkxrGk0WQp\njKgFCxbMOJY0mvyXYEQdOXJkxrGk0WQpSJIaloIkqWEpSJIaloIkqWEpSJIaloIkqWEpSJIalsKI\nWrp06YxjSaPJUhhRr371q2ccSxpNrZZCkrVJHk7SS3L1NPvPSXJXknuTPJDkfW3m0c88+eSTM46l\nLh04cICrrrqKAwcOdB1l5LRWCkkWAluA9wKrgcuTrJ4y7XeAW6vqbcA64LNt5ZH0yrF161YefPBB\nbrrppq6jjJw2VwoXAr2q2l1Vh4BbgMumzCng1P7r1wGPt5hHA3xKqobVgQMHuO2226gqbrvtNlcL\n86zNUlgOPDYwHu9vG/S7wIeTjAPbgQ0t5tEAS0HDauvWrRw9ehSYeFCjq4X51WYpTPevTE0ZXw58\noarOAt4HfDHJcZmSXJlkR5Id+/fvbyHq6Dn2f7oTjaWu3HnnnRw+fBiAw4cPc8cdd3ScaLS0WQrj\nwNkD47M4/vDQx4FbAarq28DPAWdO/UFVdWNVjVXV2LJly1qKK2kYrFmzhkWLFgGwaNEiLrnkko4T\njZY2S+FuYFWS85IsZuJE8rYpcx4F3gOQ5HwmSsGlgDTCPvKRjzQf+rRw4UKuuOKKjhONltZKoaoO\nA+uB24FdTFxltDPJdUku7U/7TeDXk9wP3Ax8tKqmHmKSNELOOOMM1q5dSxLWrl3LGWec0XWkkbKo\nzR9eVduZOIE8uO3agdcPAe9qM4OkV56LLrqIr33ta1x00UVdRxk53tEsaehcf/31HD16lM2bN3cd\nZeRYCiPq2DHbE42lrvR6Pfbs2QPAnj176PV63QYaMf5LMKK8JFXD6tOf/vSMY7XLUpA0VI6tEk40\nVrssBUlDZcWKFTOO1S5LQdJQWb9+/aTxhg0+/WY+WQqShso3v/nNGcdql6Ugaajceeedk8Y++2h+\nWQqShsqaNWsmjX320fyyFEbUBRdcMGn89re/vaMk0mRT72L2rub5ZSmMqPHx8RnHUleuv/76SWPv\nap5flsKIeuKJJyaN9+3b11ESaTLvU+iWpSBpqHifQrcsBUlD5dRTT500Pv300ztKMposBUlD5YEH\nHpg0vueeezpKMposBUlSw1KQJDUshRF1/vnnTxqvXr26oySShomlMKJ27949afyDH/ygoySShoml\nMKIOHjw441jSaLIUJA2VxYsXTxovWbKkoySjyVKQNFQOHTo0aewqdn5ZCpKkhqUgSWpYCpKkhqUg\nSWpYCpKkhqUgSWpYCpKkhqUgSWpYCpKkRqulkGRtkoeT9JJcfYI5v5rkoSQ7k3ypzTySpJktausH\nJ1kIbAEuAcaBu5Nsq6qHBuasAn4beFdVPZXk9W3lkSTNrs2VwoVAr6p2V9Uh4Bbgsilzfh3YUlVP\nAVTVEy3mkSTNos1SWA48NjAe728b9EvALyX5VpLvJFk73Q9KcmWSHUl27N+/v6W4kqQ2SyHTbKsp\n40XAKuBi4HLg80lOO+6bqm6sqrGqGlu2bNnLHlSSNKHNUhgHzh4YnwU8Ps2cP6+q56vq/wIPM1ES\nkqQOtFkKdwOrkpyXZDGwDtg2Zc6fAf8UIMmZTBxO2o0kqROtlUJVHQbWA7cDu4Bbq2pnkuuSXNqf\ndjtwIMlDwF3AJ6vqQFuZJEkza+2SVICq2g5sn7Lt2oHXBfxG/0uS1DHvaJYkNSwFSVLDUpAkNSwF\nSVLDUpAkNWa9+ijJAuADVXXrPOSR1LHNmzfT6/U6e/+3vOUt3H///ZPGGzdu7CzPypUr2bBhQ2fv\nP99mXSlU1VEm7jeQJJ3k5nqfwh1Jfgv4MvDMsY1V9cNWUknqzDD8VXxsZbBp06aOk4yeuZbCr/X/\n9xMD2wr4hZc3jiSpS3Mqhao6r+0gkqTuzakUkpwC/Dvgov6mvwZuqKrnW8olSerAXA8f/QlwCvDZ\n/vhf97f9mzZCSZK6MddS+IdV9ZaB8V8luf+EsyVJr0hzvXntSJJfPDZI8gvAkXYiSZK6MteVwieB\nu5LsZuJjNs8FPtZaKklSJ+Z69dE3kqwC3shEKXy/qg62mkySNO9eyNVH/5aBq4+SePWRJJ1kvPpI\nktTw6iNJUsOrjyRJjRdz9RHACrz6SJJOOnNdKXwLuAE42v+6Afh2W6EkSd2Y60rhJuBHwO/1x5cD\nXwQ+2EYoSVI35loKb5xyovkuTzRL0slnroeP7k3yzmODJO9g4pCSJOkkMteVwjuAK5I82h+fA+xK\n8iBQVfXmVtJJkubVXEthbaspJElDYa7PPnqk7SCSpO7N9ZyCJGkEWAqSpEarpZBkbZKHk/SSXD3D\nvA8kqSRjbeaRJM2stVJIshDYArwXWA1cnmT1NPNeC1wF/G1bWSRJc9PmSuFCoFdVu6vqEHALcNk0\n834P+Azw0xazSJLmoM1SWA48NjAe729rJHkbcHZVfa3FHJKkOWqzFDLNtmp2JguAPwZ+c9YflFyZ\nZEeSHfv3738ZI0qSBrVZCuPA2QPjs4DHB8avBX6ZiY/23AO8E9g23cnmqrqxqsaqamzZsmUtRpak\n0dZmKdwNrEpyXpLFwDpg27GdVfV0VZ1ZVSuqagXwHeDSqtrRYiZJ0gxaK4WqOgysB24HdgG3VtXO\nJNclubSt95UkvXhzffbRi1JV24HtU7Zde4K5F7eZRZI0O+9oliQ1LAVJUqPVw0eS5m7z5s30er2u\nYwyFY/8dNm7c2HGS4bBy5Uo2bNgwL+9lKUhDotfr8Xc77+Wc1xzpOkrnFj8/cRDj4CNejPjoTxbO\n6/tZCtIQOec1R/iPF/yo6xgaIr9/z6nz+n6eU5AkNSwFSVLDUpAkNSwFSVLDUpAkNSwFSVLDUpAk\nNSwFSVLDUpAkNbyjWRoSe/fu5ZkfL5z3O1g13B758UJevXfvvL2fKwVJUsOVgjQkli9fzsHDf++z\njzTJ799zKkuWL5+393OlIElqWAqSpIalIElqWAqSpIalIElqWAqSpIalIElqWAqSpIY3r0lD5NGf\n+JgLgH3PTvy9+oZXHe04Sfce/clCVs3j+1kK0pBYuXJl1xGGxqFeD4Al5/rfZBXz+7thKUhDYsOG\nDV1HGBobN24EYNOmTR0nGT2eU5AkNSwFSVLDUpAkNVothSRrkzycpJfk6mn2/0aSh5I8kOQbSc5t\nM48kaWatlUKShcAW4L3AauDyJKunTLsXGKuqNwNfBT7TVh5J0uzaXClcCPSqandVHQJuAS4bnFBV\nd1XVs/3hd4CzWswjSZpFm6WwHHhsYDze33YiHwe+Pt2OJFcm2ZFkx/79+1/GiJKkQW2WQqbZVtNO\nTD4MjAF/NN3+qrqxqsaqamzZsmUvY0RJ0qA2b14bB84eGJ8FPD51UpI1wDXAu6vqYIt5JEmzaHOl\ncDewKsl5SRYD64BtgxOSvA24Abi0qp5oMYskaQ5aK4WqOgysB24HdgG3VtXOJNclubQ/7Y+A1wBf\nSXJfkm0n+HGSpHnQ6rOPqmo7sH3KtmsHXq9p8/0lSS+MdzRLkhqWgiSpYSlIkhqWgiSpYSlIkhqW\ngiSpYSlIkhqWgiSpYSlIkhqWgiSpYSlIkhqWgiSpYSlIkhqWgiSpYSlIkhqWgiSp0eqH7Gh6mzdv\nptfrdR3jOBs3buzkfVeuXMmGDRs6eW9Jk7lSkCQ1XCl0YBj+Kr744ouP27Zp06b5DyJpqLhSGFEr\nV66cNH7Tm97UURJJw8RSGFGf//znJ40/97nPdZRE0jDx8NEIW7JkCQcPHnSVoEmG4UKIY+/f1cUP\ng0btQghLYYQdKwPPJWjYLF26tOsII8tSkDTJKP1VrON5TkGS1LAUJEmNkTt8NAwn0YbFMJ3MGwaj\ndkJRms7IlUKv1+O+7+3iyKtO7zpK5xYcKgC+u3tfx0m6t/DZH3YdQRoKI1cKAEdedTrPvel9XcfQ\nEFn6/e1dR5CGgucUJEmNVkshydokDyfpJbl6mv1Lkny5v/9vk6xoM48kaWatHT5KshDYAlwCjAN3\nJ9lWVQ8NTPs48FRVrUyyDvhD4ENtZQLYu3cvC5992sMFmmThswfYu/dw1zGkzrW5UrgQ6FXV7qo6\nBNwCXDZlzmXA1v7rrwLvSZIWM0mSZtDmieblwGMD43HgHSeaU1WHkzwNnAE82Vqo5cvZ/9SP2vrx\nc7Lgpz8iR5/vNMMwqQWncPTnTu04RVi+fHnHGaTutVkK0/3FXy9iDkmuBK4EOOecc15SqKmPjO7C\n3r2Hee6557qOMTSWLl3K8uVv6DjFG4bid0PqWpulMA6cPTA+C3j8BHPGkywCXgccd8F4Vd0I3Agw\nNjZ2XGm8EN6cJEkn1uY5hbuBVUnOS7IYWAdsmzJnG/CR/usPAH9VVS/pH31J0ovX2kqhf45gPXA7\nsBD406rameQ6YEdVbQP+C/DFJD0mVgjr2sojSZpdq3c0V9V2YPuUbdcOvP4p8ME2M0iS5s47miVJ\nDUtBktSwFCRJDUtBktSwFCRJjbzSbgtIsh94pOscJ5EzafGxItJL4O/my+vcqlo226RXXCno5ZVk\nR1WNdZ1DmsrfzW54+EiS1LAUJEkNS0E3dh1AOgF/NzvgOQVJUsOVgiSpYSmcxJJck2RnkgeS3Jfk\n60n+05Q5b02yq/96T5L/OWX/fUm+N5+5NXqSHDn2u5bkL5Kc1t++Islz/X3HvhZ3nfdkZimcpJL8\nI+CfARdU1ZuBNcAfAB+aMnUd8KWB8WuTnN3/GefPR1YJeK6q3lpVv8zEY/Q/MbDvB/19x74OdZRx\nJFgKJ6+fB56sqoMAVfVkVf0N8P+SDH5W9q8CtwyMb+VnxXE5cPN8hJUGfJuJz29XByyFk9dfAmcn\n+T9JPpvk3f3tN9P/MKMk7wQOVNXfDXzfV4F/2X/9z4G/mK/AUpKFwHuY/CmNvzhw6GhLR9FGhqVw\nkqqqnwBvB64E9gNfTvJRJlYFH0iygIlymLoS+CHwVJJ1wC7g2XkLrVG2NMl9wAHgdOCOgX2Dh48+\nMf236+ViKZzEqupIVf11VX0KWA/8SlU9BuwB3g38ChOHi6b6MrAFDx1p/jxXVW8FzgUWM/mcguaR\npXCSSvLGJKsGNr2Vnz1I8Gbgj5n4C2x8mm//H8BnmPh8bWneVNXTwFXAbyU5pes8o8hSOHm9Btia\n5KEkDwCrgd/t7/sK8A+YfIK5UVU/rqo/9CoPdaGq7gXup3/uS/PLO5olSQ1XCpKkhqUgSWpYCpKk\nhqUgSWpYCpKkhqUgzSLJaUn+fdc5pPlgKUizOw2wFDQSLAVpdn/Azx7K9pUklx3bkeS/Jrk0yUeT\n/HmS25I8nORTA3M+nOR/97//hv5D36ShZClIs7ua/kPZgOuBjwEkeR3wj4Ht/XkXAv+KiUeKfDDJ\nWP8zKT4EvKv//Uf6c6ShtKjrANIrSVX9TZItSV7PxCPG/1tVHU4CcEdVHQBI8t+BfwIcZuJptXf3\n5ywFnugkvDQHloL0wn2Rib/21wG/NrB96jNjCgiwtap+e56ySS+Jh4+k2f0YeO3A+AvAfwCoqp0D\n2y9JcnqSpcC/AL4FfIOJz694PUB//7nzklp6EVwpSLOoqgNJvpXke8DXq+qTSXYBfzZl6v9iYhWx\nEvhSVe0ASPI7wF/2P9joeSY+K+ARpCHkU1KlFyjJq4AHgQv6z/+n/6l2Y1W1vsts0kvl4SPpBUiy\nBvg+sPlYIUgnE1cKkqSGKwVJUsNSkCQ1LAVJUsNSkCQ1LAVJUsNSkCQ1/j/7/w1GMgPZ3gAAAABJ\nRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1a0f19e588>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "scores"
+    "sns.boxplot(x=\"type\", y=\"poor\", data=data)"
    ]
   },
   {
