add SVM submission and RF work

--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -2,15 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input shape:\t(8203, 344)\n",
+      "After standardization (8203, 344)\n",
+      "After converting categoricals:\t(8203, 859)\n",
+      "Input shape:\t(3255, 441)\n",
+      "After standardization (3255, 441)\n",
+      "After converting categoricals:\t(3255, 1432)\n",
+      "Input shape:\t(6469, 163)\n",
+      "After standardization (6469, 163)\n",
+      "After converting categoricals:\t(6469, 795)\n",
+      "Input shape:\t(37560, 41)\n",
+      "After standardization (37560, 41)\n",
+      "After converting categoricals:\t(37560, 274)\n",
+      "Input shape:\t(20252, 224)\n",
+      "After standardization (20252, 224)\n",
+      "After converting categoricals:\t(20252, 1641)\n",
+      "Input shape:\t(29913, 41)\n",
+      "After standardization (29913, 41)\n",
+      "After converting categoricals:\t(29913, 300)\n",
+      "Input shape:\t(4041, 344)\n",
+      "After standardization (4041, 344)\n",
+      "After converting categoricals:\t(4041, 851)\n",
+      "Input shape:\t(1604, 441)\n",
+      "After standardization (1604, 441)\n",
+      "After converting categoricals:\t(1604, 1419)\n",
+      "Input shape:\t(3187, 163)\n",
+      "After standardization (3187, 163)\n",
+      "After converting categoricals:\t(3187, 773)\n",
+      "Input shape:\t(18535, 41)\n",
+      "After standardization (18535, 41)\n",
+      "After converting categoricals:\t(18535, 273)\n",
+      "Input shape:\t(10066, 224)\n",
+      "After standardization (10066, 224)\n",
+      "After converting categoricals:\t(10066, 1534)\n",
+      "Input shape:\t(14701, 41)\n",
+      "After standardization (14701, 41)\n",
+      "After converting categoricals:\t(14701, 301)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from statsmodels.imputation import mice\n",
     "import numpy as np\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "from validation import benchmark\n",
     "\n",
     "# import submission function\n",
     "from data_munge import make_country_sub, impute"
@@ -37,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -49,125 +93,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "from sklearn import svm\n",
+    "from sklearn.metrics import log_loss\n",
+    "from sklearn.model_selection import GridSearchCV, cross_val_score\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model = svm.SVC(probability=True, cache_size=500)\n",
+    "Cs = np.logspace(-6, -1, 10)\n",
     "\n",
-    "def train_model(features, labels, **kwargs):\n",
-    "    \n",
-    "    # instantiate model\n",
-    "    model = svm.SVC(kernel='sigmoid', probability=True, cache_size=500)\n",
-    "    \n",
-    "    # train model\n",
-    "    model.fit(features, labels)\n",
-    "    \n",
-    "    # get a (not-very-useful) sense of performance\n",
-    "    accuracy = model.score(features, labels)\n",
-    "    print(f\"In-sample accuracy: {accuracy:0.2%}\")\n",
-    "    \n",
-    "    return model"
+    "clf = GridSearchCV(estimator=model, param_grid=dict(C=Cs),\n",
+    "                   n_jobs=-1, scoring='neg_log_loss')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In-sample accuracy: 86.10%\n"
-     ]
-    }
-   ],
-   "source": [
-    "model_a = train_model(aX_h_train, ay_h_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In-sample accuracy: 92.29%\n"
-     ]
-    }
-   ],
-   "source": [
-    "model_b = train_model(bX_h_train, by_h_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In-sample accuracy: 88.92%\n"
-     ]
-    }
-   ],
-   "source": [
-    "model_c = train_model(cX_h_train, cy_h_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "benchmark_a = benchmark(model_a, aX_h_train, ay_h_train)\n",
-    "benchmark_b = benchmark(model_b, bX_h_train, by_h_train)\n",
-    "benchmark_c = benchmark(model_c, cX_h_train, cy_h_train)"
+    "scores = cross_val_score(model, bX_h_train, by_h_train, scoring='neg_log_loss')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.23842640421846936"
+       "array([-0.23085231, -0.22119605, -0.2258765 ])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "benchmark_a.score()\n",
-    "benchmark_b.score()\n",
-    "benchmark_c.score()"
+    "scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.26236176387521409"
+       "SVC(C=1.0, cache_size=500, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='rbf',\n",
+       "  max_iter=-1, probability=True, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(aX_h_train, ay_h_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.30420235,  0.27737576,  0.31650823])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "benchmark_a.score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.25174651498772405"
+      ]
+     },
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +286,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = pd.concat([submission,submission_old], axis=0)"
